# indexnow-rs

./: Cargo.toml  README.md  clippy.toml  urlset.txt
src/: client.rs  lib.rs  main.rs
src/client/: reqwest.rs
