[package]
name = "indexnow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argfile = "0.1.4"
clap = {version = "3.2.17", features = ["derive", "env"]}
http = "0.2.8"
once_cell = "1.13.1"
regex = "1.6.0"
thiserror = "1.0.32"
tokio = {version = "1.20.1", features = ["rt", "macros"]}
