[package]
name = "indexnow"
description = "CLI and library for the `IndexNow.org` API to ping search engines about changed content"
license = "MIT OR Apache-2.0"
version = "0.0.0"
edition = "2021"

[dependencies]
argfile = "0.1.4"
bytes = "1.2.1"
clap = {version = "3.2.17", features = ["derive", "env"]}
headers = "0.3.7"
http = "0.2.8"
http-body = "0.4.5"
once_cell = "1.13.1"
regex = "1.6.0"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
thiserror = "1.0.32"
tokio = {version = "1.20.1", features = ["rt", "macros"]}

[dev-dependencies]
assert-json-diff = "2.0.2"
