[package]
name = "indexnow"
description = "CLI and library for the `IndexNow.org` API to ping search engines about changed content"
license = "MIT OR Apache-2.0"
version = "0.0.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
argfile = "0.2"
bytes = "1"
clap = {version = "4", features = ["derive", "env"]}
headers = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
once_cell = "1"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tokio = {version = "1", features = ["rt", "macros"]}

[dev-dependencies]
assert-json-diff = "2"
